data/derived/sp14/progs/unify/prog1942.ml.out
Characters 72-80:
  if rand (0,1) = 0 then buildX() else buildY();;
                         ^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
